--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -4,7 +4,7 @@
 
 Since antiquity the idea of building a thinking machine has always been in the minds of philosophers, artists, inventors, kings, and commoners alike, filling us with wonder, terror, and contemplation. A human creation capable of human feats would turn us, at least in an allegorical sense, into gods. This long time dream is an inspiration for the field of _Artificial Intelligence_ (AI). AI was born in 1956 on the _Dartmouth Summer Research Project on Artificial Intelligence_. In the early days of AI, the kind of problems that were tackled were the ones that are easy for a computer to solve but difficult for humans. These kinds of tasks are logical and mathematical in their very nature. Ironically the kind of tasks that are easy for humans have proved to be difficult to code on computers. Like visual identification of objects or navigation through complex environments. Because of their apparent easiness we seldom stop to think about how we actually manage to solve them and coming with a precise set of rules is labor-intensive and error-prone. An approach to solve those kinds of tasks is called _Machine Learning_ (ML). The basic idea of machine learning is to use data on the task at hand and let the computer figure out how to best use the data to solve the problem, in a figurative way learning from observation. The promise of such methods is avoiding explicit programming to solve problems and perhaps getting us closer to the faraway dream of a thinking machine. 
 
-_Reinforcement Learning_ (RL) is a branch of ML that is inspired by how we learn through interaction with the real world. An agent interacts with an environment a receives a signal, called _reward_. The main idea of RL is that the agent should accumulate as much _reward_ as possible. In doing so it would accomplish whatever its purpose is. This is known as the _reward hypothesis_, in other words, getting plenty of favorable rewards is great for whatever the agent is trying to do. The agent, from its current knowledge, chooses an _action_ and then receives a _reward_ and an _observation_ from the environment, this process is repetead over and over while the agents seeks for its goal by accumulating _reward_. In summary, the _RL problem_ is how to correctly act to accomplish a goal by looking for behavior that maximizes an accumulated _reward_ quantity, know as _return_.
+_Reinforcement Learning_ (RL) is a branch of ML that is inspired by how we learn through interaction with the real world. An agent interacts with an environment a receives a signal, called _reward_. The main idea of RL is that the agent should accumulate as much _reward_ as possible. In doing so it would accomplish whatever its purpose is. This is known as the _reward hypothesis_, in other words, getting plenty of favorable rewards is great for whatever the agent is trying to do. The agent, from its current knowledge, chooses an _action_ and then receives a _reward_ and an _observation_ from the environment, this process is repeated over and over while the agents seeks for its goal by accumulating _reward_. In summary, the _RL problem_ is how to correctly act to accomplish a goal by looking for behavior that maximizes an accumulated _reward_ quantity, know as _return_.
 
 A popular perspective on AI and ML is deep learning. _Deep Learning_ is a myriad of techniques based on _artificial neural networks_ (ANN). ANN are loosely based in neuroscience and the brain structure. They are composed of several arrays of computing units called _neurons_. Neurons are arranged in hierarchies called layers. The processing of an ANN is done in an orderly fashion by the layers. When an input is received it is processed by the first layer, then the second and so on, until the last layer, which outputs the final result. If a technique or method is designated as _deep learning_ it only implies that such technique employs an ANN with a bunch of layers.
 
@@ -12,7 +12,7 @@ Naturally, RL and deep learning can be combined, this union is known as _Deep Re
 
 One important aspect of advancing an AI area is to have adequate benchmarks. _Benchmarks_ are key problems that are widely used for the evaluation and design of algorithms. Having good performance on a benchmark is used to showcase the prowess of an algorithm. Nonetheless putting too much faith into a single benchmark could hurt research in the long run [@hooker1995testing][@stanley2015greatness]. Despite their pitfalls, they are essential tools of AI research. To name an important example, the _ImageNet_ dataset [@deng2009imagenet] and its associated challenge the _Large Scale Visual Recognition Challenge_ [@russakovsky2015imagenet] were fundamental for setting the current popularity of deep learning techniques and the bonanza in the field of computer vision.
 
-In the scope of RL, a widely accepted benchmark is the _Arcade Learning Environment_ (ALE) [@bellemare2013arcade]. ALE is a suite of more than fifty games from the Atari 2600 console. Moreover, frameworks such as _Open AI Gym_ [@1606.01540] have lowered the barrier entry for using ALE, making Atari games easily accessible for RL algorithms and their training and evaluation. ALE's primary strengths are its variety of tasks and the independent creation of each game which reduces the bias of a single manufacturer. If a single algorithm is capable of performing well on a variety of very different and difficult tasks, it would be conceivable to claim its generality. Thus, ALE challanges any general RL algorithm to play well on as many as possible Atari games. A key event for the popularization of Atari games as a benchmark was their utilization on the seminal _Deep Q-Networks_ (DQN) papers [@mnih2013playing][@mnih2015human]. The DQN algorithm achieved a remarkable performance on a dozen of Atari games, receiving as input just raw pixels, hence without the games rules and from a single set of hyperparameters. DQN revived the interest in DRL methods.
+In the scope of RL, a widely accepted benchmark is the _Arcade Learning Environment_ (ALE) [@bellemare2013arcade]. ALE is a suite of more than fifty games from the Atari 2600 console. Moreover, frameworks such as _Open AI Gym_ [@1606.01540] have lowered the barrier entry for using ALE, making Atari games easily accessible for RL algorithms and their training and evaluation. ALE's primary strengths are its variety of tasks and the independent creation of each game which reduces the bias of a single manufacturer. If a single algorithm is capable of performing well on a variety of very different and difficult tasks, it would be conceivable to claim its generality. Thus, ALE challenges any general RL algorithm to play well on as many as possible Atari games. A key event for the popularization of Atari games as a benchmark was their utilization on the seminal _Deep Q-Networks_ (DQN) papers [@mnih2013playing][@mnih2015human]. The DQN algorithm achieved a remarkable performance on a dozen of Atari games, receiving as input just raw pixels, hence without the games rules and from a single set of hyperparameters. DQN revived the interest in DRL methods.
 
 Other common benchmarks for RL are, GridWorlds [@sutton2018reinforcement], robotics simulations with the MuJoCo physics engine [@todorov2012mujoco], classic control tasks [@1606.01540] and a heterogeneous variety of game theoretical tasks and board games [@lanctot2019openspiel].
 
@@ -32,7 +32,7 @@ _What makes a good benchmark?_ is a tough question to answer, since each field h
 
 In this thesis, we consider the advantages of using Cellular Automata as underlying environments for RL tasks. To fully incorporate a Cellular Automaton into the RL framework a _Markov Decision Process_ (MDP) should be defined. So we need to be able to find appropriate sets of _Actions_ ($\mathcal{A}$), _States_ ($\mathcal{S}$) and _Rewards_ ($\mathcal{R}$), also specify an _Agent_ that interacts with the CA and explicitly or implicitly define the transitions of the MDP $p(s',r|s,a): \mathcal{S} \times \mathcal{R} \times \mathcal{S} \times \mathcal{A} \rightarrow [0,1]$.
 
-The particular CA that we would be using through this document is the _Drossel and Schwabl model_ (DSM) [@drossel1992self] also refered as the Forest Fire CA. DSM captures the dynamics of wildfires. Thus our first challenge is engineering a RL task that successfully integrates the DSM with some practical semantics. Thus, we propose an _Agent_ or "Helicopter" flying over the forest trying to extinguish the wildfire. For an initial characterization, a grid of $3 \ times 3$ will be used. Therefore, the set of all states $\mathcal{S}$ of the proposed environment will be the configurations of a $3 \times 3$ forest fire CA, with a tuple of helicopter positions $(row,col)$ and an internal parameter $m$ that takes two values $\{0, 1\}$ and controls the synchronization of helicopter movements and CA computations. The set of all actions $\mathcal{A}$ is the possible movement to all cells in a Moore's neighborhood from the agent position _{"Left-Up", "Up", "Right-Up", "Right", "Stay", "Left", "Left-Down", "Down", "Right-Down"_}. The rules that implicitly define the dynamics $p$ of the environment are:
+The particular CA that we would be using through this document is the _Drossel and Schwabl model_ (DSM) [@drossel1992self] also referred as the Forest Fire CA. DSM captures the dynamics of wildfires. Thus our first challenge is engineering a RL task that successfully integrates the DSM with some practical semantics. Thus, we propose an _Agent_ or "Helicopter" flying over the forest trying to extinguish the wildfire. For an initial characterization, a grid of $3 \ times 3$ will be used. Therefore, the set of all states $\mathcal{S}$ of the proposed environment will be the configurations of a $3 \times 3$ forest fire CA, with a tuple of helicopter positions $(row,col)$ and an internal parameter $m$ that takes two values $\{0, 1\}$ and controls the synchronization of helicopter movements and CA computations. The set of all actions $\mathcal{A}$ is the possible movement to all cells in a Moore's neighborhood from the agent position _{"Left-Up", "Up", "Right-Up", "Right", "Stay", "Left", "Left-Down", "Down", "Right-Down"_}. The rules that implicitly define the dynamics $p$ of the environment are:
 
 1. The selection of any action would affect the "Helicopter" position tuple (unless the _"Stay"_ action was chosen), this is referred as "moving".
 2. After moving to any cell the "Helicopter" extinguishes the fire by changing, if applicable, a current "fire" cell to an "empty" cell.
