--- a/index.Rmd
+++ b/index.Rmd
@@ -28,9 +28,13 @@ knitr::opts_chunk$set(echo=F, message=F, warning=F, dev="cairo_pdf")
 
 \textbf{\large{The recent field of Deep Reinforcement Learning promises a new class of general algorithms capable of learning from real or simulated world interactions. Hence the field popularity has exploded in the last years. Despite its potential, real world concrete applications are lacking. This document proposes a novel Reinforcement Learning environment based on Cellular Automata, which are quintessential models of complex systems. Particularly a Forest Fire Cellular Automata was used as underlying dynamics for an agent that can affect the grid configuration by changing fire cells to empty cells. The semantics are those of a \say{Helicopter} trying to extinguishing a wild fire. We applied Deep Q-networks to solve the proposed environment on a $3 \times 3$ grid. We evaluate our agent on a 100,000 steps simulation of the environment. Our results show that Cellular Automata can be used as benchmark for Reinforcement Learning algorithms, likewise its modeling capabilities could help to narrow the gap to real world applications.}}
 
+# Resumen {-}
+
+\textbf{\large{El novedoso campo del Aprendizaje Profundo por Refuerzo promete una nueva clase de algoritmos generales capaces de aprender directamente de interacciones con el mundo, ya sean reales o simuladas. Debido a esto la popularidad de este campo ha crecido en los últimos años. A pesar de su enorme potencial, aún faltan aplicaciones concretas en la vida real. En este documento se propone un nuevo ambiente de Aprendizaje por Refuerzo basado en Autómatas Celulares, los cuales son ejemplos característicos de sistemas complejos. Particularmente se usó el Autómata Celular de Incendios Forestales como la dinámica subyacente para un agente, el cual afecta la cuadrícula cambiando celdas tipo fuego por celdas tipo vacías. La semántica corresponde a la de un \say{Helicóptero} tratando de apagar un incendio forestal. Para tratar de resolver el ambiente propuesto se empleó el algoritmo de \emph{Deep Q-networks} sobre una cuadrícula de $3 \times 3$. El agente fue evaluado durante 100,000 pasos de una simulación del ambiente. Nuestros resultados muestran que los Autómatas Celulares pueden ser usados como punto de referencia para algoritmos de Aprendizaje por Refuerzo, además el uso de Autómatas Celulares, por sus capacidades de modelado, podría reducir la brecha entre simulación y aplicación a la vida real.}}
+
 # Acknowledgments {-}
 
-Writing is hard. But this is a known fact. What is not known is the particular environment and situations that any writer must endure finishing its work. This thesis is dedicated to all the persons that somehow, consciously or unconsciously, have softened the weight and have let me only to struggle with the hard part of writing and not the harder part of "everything else".
+Writing is hard. But this is a known fact. What is not known is the particular environment and situations that any writer must endure finishing its work. I dedicate this thesis to all the persons that somehow, consciously or unconsciously, have reduced the burden of writing by supporting me with "everything else". Without them, this work would be impossible to finish.
 
 \begin{flushleft}
 \emph{To my family,\\including pets, for always being there, no matter what.}
