--- a/test/test_kable.Rmd
+++ b/test/test_kable.Rmd
@@ -18,7 +18,7 @@ BROWN <- "#B1A898"
 ```
 
 ```{r hyper2, message=FALSE}
-caption <- 'Comparision of obtained returns from the nine runs. The return was computed from playing 100,000 steps per run following the learned policy. The runs are ordered from best to worst and are named from $a$ to $i$, the "heuristic" and "random" baselines are marked as "H" and "R" respectively.'
+caption <- 'Comparison of obtained returns from the nine runs. The return was computed from playing 100,000 steps per run following the learned policy. The runs are ordered from best to worst and are named from $a$ to $i$, the "heuristic" and "random" baselines are marked as "H" and "R" respectively.'
 opts <- options(knitr.kable.NA = "")
 
 read_csv('../data/04_runs_3x3_v2.csv') %>%
